fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@ body {
   background-color: #1f2937;
   width: 100%;
   scroll-behavior: smooth;
-
   
 }
 
@@ -53,6 +52,7 @@ a {
   justify-content: space-between;
   position: relative;
   top: 10rem;
+  overflow: hidden;
 }
 .hero-section .hero-container {
   position: relative;
@@ -119,7 +119,8 @@ a {
   top: 2rem;
   display: flex;
   flex-direction: column;
-  width: auto
+  width: auto;
+  overflow: hidden;
 }
 
 .project-section .project-container h1 {
